# Changelog
All notable changes to this project will be documented in this file.

## [1.9.4] 2026-01-26
 
 ### Added
 - Added `Element-Any` and `Any-Any` columns to the Coordination Number (CN) distribution for aggregated neighbor counting.
 - Added descriptions and unit metadata to HDF5 output groups and datasets.
 
 ### Changed
 - Improved HDF5 internal structure by sanitizing group names (e.g., removing parentheses) and adding consistent unit attributes (`Angstrom`, `Angstrom^-1`, etc.).
 - Updated project version to 1.9.4 in `CMakeLists.txt`.

## [1.9.3] 2026-01-26

### Changed
- Refactored tests to use Trajectory object for Cell and cutoff management.
- Updated project version to 1.9.3 in CMakeLists.txt.

## [1.9.1] 2026-01-23


### Added
- Added support for reading ARC trajectory files (`.arc`).
- Implemented `Trajectory` class for handling multi-frame simulations.
- Added `readTrajectory` function to `FileIO`.
- Added unit tests for ARC file reading and duplicate frame handling.

### Fixed
- Fixed compilation issues on Windows.

## [1.9.0] 2026-01-22

### Added
- Migrated data output to HDF5 format (via `.h5` files), providing a consolidated and more efficient alternative to multiple CSV files.
- Integrated **HighFive** (v2.10.1) for modern C++ HDF5 support.

### Fixed
- Resolved CMake configuration error ("Compatibility with CMake < 3.5 has been removed") by updating HighFive and setting `CMAKE_POLICY_VERSION_MINIMUM` to 3.5.
- Fixed a UI initialization bug where the "Gaussian" smoothing kernel was not correctly displayed in the dropdown on startup.

### Changed
- Refactored `OptionsCard.slint` to set **Smoothing** to be always enabled by default, simplifying the UI and ensures consistent analysis results.
- Updated project version to 1.9.0 in `CMakeLists.txt`.

## [1.8.2] 2026-01-21

### Fixed
- Fixed tooltip positioning by ensuring the `AppToolTips` container is correctly anchored and sized in `AppWindow.slint`.