@@ -6,6 +6,8 @@ All notable changes to this project will be documented in this file.
  ### Added
  - Added `Element-Any` and `Any-Any` columns to the Coordination Number (CN) distribution for aggregated neighbor counting.
  - Added descriptions and unit metadata to HDF5 output groups and datasets.
+ - Added trajectory revision to support removing duplicated frames.
+ - Added parsing of frame energy from `.arc` files.
  
  ### Changed
  - Improved HDF5 internal structure by sanitizing group names (e.g., removing parentheses) and adding consistent unit attributes (`Angstrom`, `Angstrom^-1`, etc.).
